feat: meta setting view

--- a/ClashX/Base.lproj/Main.storyboard
+++ b/ClashX/Base.lproj/Main.storyboard
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21507"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--MetaPrefs-->
+        <scene sceneID="ra8-dT-SdE">
+            <objects>
+                <controllerPlaceholder storyboardName="MetaPrefs" id="koZ-Yx-GN3" sceneMemberID="viewController"/>
+                <customObject id="x2t-qv-ffE" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1333" y="666"/>
+        </scene>
         <!--Settings-->
         <scene sceneID="7zJ-aQ-tNg">
             <objects>
@@ -14,6 +21,7 @@
                         <tabViewItem label="General" identifier="general" image="gearshape" catalog="system" id="Ltt-Vq-Hh1"/>
                         <tabViewItem image="keyboard" catalog="system" id="gnz-rO-Jv7"/>
                         <tabViewItem label="Debug" identifier="Debug" image="hammer" catalog="system" id="3Om-yT-A83"/>
+                        <tabViewItem label="Meta" identifier="Meta" image="m.square" catalog="system" id="mC7-r4-xhU"/>
                     </tabViewItems>
                     <tabView key="tabView" type="noTabsNoBorder" id="81C-Yt-rOb">
                         <rect key="frame" x="0.0" y="0.0" width="379" height="300"/>
@@ -28,6 +36,7 @@
                         <segue destination="kma-mp-ncL" kind="relationship" relationship="tabItems" id="sab-cs-oab"/>
                         <segue destination="wKZ-TE-sf8" kind="relationship" relationship="tabItems" id="T1L-JQ-EKQ"/>
                         <segue destination="kdV-Em-qBi" kind="relationship" relationship="tabItems" id="Mkx-Wo-vD6"/>
+                        <segue destination="koZ-Yx-GN3" kind="relationship" relationship="tabItems" id="GD0-2z-8CX"/>
                     </connections>
                 </tabViewController>
                 <customObject id="bpW-G9-2N4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -699,7 +708,6 @@
                 <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="ClashX_Meta" customModuleProvider="target">
                     <connections>
                         <outlet property="allowFromLanMenuItem" destination="Vz8-7n-vx6" id="Fzz-EG-huC"/>
-                        <outlet property="alphaMetaVersionMenuItem" destination="Stq-Vy-QaD" id="2d6-jd-m0Z"/>
                         <outlet property="apiPortMenuItem" destination="hwG-qf-DeZ" id="d6K-i7-yCo"/>
                         <outlet property="autoStartMenuItem" destination="B1J-XB-BiZ" id="xaS-h5-qd0"/>
                         <outlet property="checkForUpdateMenuItem" destination="p0T-J8-Emx" id="9BN-2j-QNB"/>
@@ -709,7 +717,6 @@
                         <outlet property="dashboardMenuItem" destination="XG6-2M-PNi" id="hzn-77-3Uc"/>
                         <outlet property="externalControlSeparator" destination="tXn-AQ-OT3" id="ddo-u2-wUb"/>
                         <outlet property="flushFakeipCacheMenuItem" destination="WZT-AH-ria" id="Sb4-rY-pg2"/>
-                        <outlet property="hideUnselecableMenuItem" destination="C3l-5G-vzB" id="pxn-sY-Hmf"/>
                         <outlet property="httpPortMenuItem" destination="WNw-8Y-VFw" id="ldW-Gw-Q9L"/>
                         <outlet property="ipMenuItem" destination="D2R-eG-cms" id="ugc-iD-j9T"/>
                         <outlet property="logLevelMenuItem" destination="3Da-fL-Mzr" id="ZCW-Il-fOZ"/>
@@ -730,9 +737,6 @@
                         <outlet property="socksPortMenuItem" destination="Uy1-g8-r6Q" id="NiI-Gy-9Sa"/>
                         <outlet property="statusMenu" destination="Afa-lD-EbR" id="cov-E9-WrO"/>
                         <outlet property="tunModeMenuItem" destination="ZoW-Ax-rde" id="ep1-C4-irW"/>
-                        <outlet property="updateAlphaMetaMenuItem" destination="MWh-yg-3Yk" id="jJi-h8-7T2"/>
-                        <outlet property="useAlphaMetaMenuItem" destination="sk5-MZ-XB1" id="Ijq-xa-vVc"/>
-                        <outlet property="useYacdDashboardMenuItem" destination="GRz-PJ-MJ7" id="Jj1-Wl-NUt"/>
                     </connections>
                 </customObject>
                 <menu id="Afa-lD-EbR">
@@ -917,48 +921,6 @@
                                     <menuItem title="Rule providers" id="cJg-BS-yk2">
                                         <modifierMask key="keyEquivalentModifierMask"/>
                                         <menu key="submenu" title="Rule providers" id="wiW-XY-cyg"/>
-                                    </menuItem>
-                                    <menuItem isSeparatorItem="YES" id="mmr-bS-73Y"/>
-                                    <menuItem title="Alpha Core" id="WNb-4C-MWu">
-                                        <modifierMask key="keyEquivalentModifierMask"/>
-                                        <menu key="submenu" title="Alpha Core" autoenablesItems="NO" id="JYf-zC-xoj">
-                                            <items>
-                                                <menuItem title="Use alpha meta" id="sk5-MZ-XB1">
-                                                    <modifierMask key="keyEquivalentModifierMask"/>
-                                                    <connections>
-                                                        <action selector="useAlphaMeta:" target="Voe-Tx-rLC" id="RkO-tr-1sq"/>
-                                                    </connections>
-                                                </menuItem>
-                                                <menuItem title="Requires restart  ⚠️" enabled="NO" id="u64-fu-xPW">
-                                                    <modifierMask key="keyEquivalentModifierMask"/>
-                                                </menuItem>
-                                                <menuItem isSeparatorItem="YES" id="GYy-fK-D1G"/>
-                                                <menuItem title="Version: none" id="Stq-Vy-QaD">
-                                                    <modifierMask key="keyEquivalentModifierMask"/>
-                                                    <connections>
-                                                        <action selector="showAlphaInFinder:" target="Voe-Tx-rLC" id="vFS-HH-EV6"/>
-                                                    </connections>
-                                                </menuItem>
-                                                <menuItem title="Download or update" id="MWh-yg-3Yk">
-                                                    <modifierMask key="keyEquivalentModifierMask"/>
-                                                    <connections>
-                                                        <action selector="updateAlphaMeta:" target="Voe-Tx-rLC" id="hgd-A7-HbD"/>
-                                                    </connections>
-                                                </menuItem>
-                                            </items>
-                                        </menu>
-                                    </menuItem>
-                                    <menuItem title="Hide unselectable" id="C3l-5G-vzB">
-                                        <modifierMask key="keyEquivalentModifierMask"/>
-                                        <connections>
-                                            <action selector="hideUnselectable:" target="Voe-Tx-rLC" id="ifq-SY-ov8"/>
-                                        </connections>
-                                    </menuItem>
-                                    <menuItem title="Use yacd Dashboard" id="GRz-PJ-MJ7">
-                                        <modifierMask key="keyEquivalentModifierMask"/>
-                                        <connections>
-                                            <action selector="useYacdDashboard:" target="Voe-Tx-rLC" id="spp-Vf-uu4"/>
-                                        </connections>
                                     </menuItem>
                                 </items>
                             </menu>
@@ -2140,5 +2102,6 @@
         <image name="gearshape" catalog="system" width="16" height="16"/>
         <image name="hammer" catalog="system" width="19" height="18"/>
         <image name="keyboard" catalog="system" width="19" height="13"/>
+        <image name="m.square" catalog="system" width="15" height="14"/>
     </resources>
 </document>
